[package]
name = "cprp-web-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
plotters = "0.3"
tokio-stream = "0.1"
futures = "0.3"
serde_json = "1.0"
